--- a/geodex/website/index.html
+++ b/geodex/website/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GeoCODES</title>
+  <title>GeoCODES: JS-SPARQL search</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.png">
-  <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/simple-grid.css">
-  <link rel="stylesheet" type="text/css" href="css/zc-grid.css">
+  <link rel="shortcut icon" href="../img/favicon.png">
 
+  <!-- <script type="module">
+    import {html, render} from '/js/lit-html.js';
+  </script>
+  <script data-main="/js/geodexv2/main" src="/js/require.js"></script> -->
+
+
+  <script type="module" src="/js/geodexv2/main.js"></script>
+
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/simple-grid.css">
+  <link rel="stylesheet" href="/css/zc-grid.css">
+  <link rel="stylesheet" href="/css/card.css">
 </head>
+
 <body>
   <div class="jumbotron" style="background-image: linear-gradient(#7391ff, #625354);">
     <div class="container">
       <div class="row">
         <div class="col-12 center">
-          <img src="./img/location2.svg">
+          <img src="/img/location2.svg">
           <h3 style="margin:5px;color:white">GeoCODES</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
-            <!--
+          <!-- 
           <div class="img img-logo center"></div>
           <h1>Simple Grid is a CSS grid for your website.</h1>
           <h2 class="font-light">Responsive, light, simple.</h2>
@@ -27,144 +37,106 @@
           </a>
             -->
         </div>
+
+      </div>
+      <div class="row">
         <div class="col-12 center">
-        <form action="search.html" method="GET">
-          <img src="./img/search.svg" style="height:25px">
-            <input style="font-size:120%"  type="search" id="q" name="q" aria-label="Search for samples">
-            <button id="update">Search</button>
-        </form>
-            <!--   <div class="img img-website-mock"></div>  -->
+          <p>
+            <a style="margin:5px;color:white " href="/index.html">home</a>
+            <a style="margin:5px;color:white " href="/search.html">search</a>
+            <a style="margin:5px;color:white " href="/about.html">about</a>
+          </p>
         </div>
-
       </div>
+
       <div class="row">
         <div class="col-2 hidden-sm"></div>
       </div>
-     </div>
+    </div>
   </div>
 
-  <div class="body-content">
-    <div style="padding-top:0px;top:0px" class="container">
+  <div class="body-content" style="padding:0px">
 
+    <details>
+      <summary>Search suggestions</summary>
+      <p>
+        Some search ideas for example resutls:
+      <ul>
+        <li>ross sea</li>
+        <li>acidification</li>
+        <li>CO2</li>
+        <li>Steens Reversal</li>
+        <li>Haugtjern Norway</li>
+        <li>basalt</li>
+        <li>IPCC models</li>
+        <li>seismic</li>
+        <li>sea ice</li>
+      </ul>
+      </p>
+      <p>
+        Note: fuzzy searching and stemming search is supported but I think my current search short circuits those.
+      </p>
+    </details>
+
+    <!-- <sl-card class="card-header">
+      <div slot="header">
+        Header Title
+      </div>
+    
+      This card has a header. You can put all sorts of things in it!
+    </sl-card> -->
+
+    <div style="max-width:fit-content;padding:0px;top:0px" class="container">
       <div class="row">
-        <div class="col-4 center">
-          <!-- <div class="img img-responsive center"></div> -->
-          <img src="./img/cdf.png" style="height:75px">
-          <h3>Organization</h3>
-          <p>
-            The sources for GeoCODES comes mostly from collaboration with
-            the
-            <a target="_blank" href="https://www.earthcube.org/council-of-data-facilities">
-            EarthCube Council of Data Facilities (CDF)</a>.
-          </p>
+        <div class="col-12 center">
+          <img src="../img/search.svg" style="height:25px">
+          <input style="font-size:120%" type="search" id="q" name="q" aria-label="Search for samples">
+          <button style="color:black;border-color:black;border-style:solid" id="update">Search</button>
+          <!--   <div class="img img-website-mock"></div>  -->
+          <input id="nn" type="number" min="5" max="200" step="5" value="20" />
+          <!-- <label>
+		<input type="hidden" size="10" id="n">
+	</label>
+	<label>
+		<input type="hidden" size="10" value="0" id="s">
+	</label>
+	<label>
+		<input type="hidden" size="10" id="i">
+  </label> -->
+          <div id="container1"></div>
+
         </div>
-        <div class="col-4 center">
-          <!-- <div class="img img-lightweight center"></div> -->
-          <img src="./img/outsource.svg" style="height:75px">
-          <h3>Providers</h3>
-          <p>
-            CDF members who express their resources via structured data on
-            the web approaches can be indexed.
-          </p>
-        </div>
-        <div class="col-4 center">
-          <img src="./img/aggregate.svg" style="height:75px">
-          <!-- <div class="img img-simple center"></div> -->
-          <h3>Indexing</h3>
-          <p>
-             GeoCODES uses the gleaner program
-             (<a target="_blank" href="https://gleaner.io">gleaner.io</a>)
-             to build the index and
-             (<a target="_blank" href="https://github.com/fils/goobjectweb/blob/master/docs/about.md">GROW</a>) as a server.  See the
-             <a href="./about.html">about  section</a>  for more.
-          </p>
+      </div>
+    </div>
+
+      <div style="padding:0px;top:0px" class="container">
+        <div class="row">
+          <div class="col-12">
+            <div id="container2"></div>
+          </div>
+          <!-- <div class="col-4">
+            <div id="container2">Tool Match Results Here</div>
+          </div> -->
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-2 hidden-sm"></div>
-        <div class="col-8">
-          <h3 class="center m-bottom">References</h3>
-          <p>
-            A very rough draft providing an overview on
-            some topics related to GeoCODES on the
-            <a href="./about.html">about  page. </a>
-
-          </p>
-
-
-        </div>
-        <div class="col-2 hidden-sm"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-4 hidden-sm"></div>
-        <div class="col-4">
-          <div class="line"></div>
-        </div>
-        <div class="col-4 hidden-sm"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-2 hidden-sm"></div>
-        <div class="col-8">
-          <h3 class="center m-bottom">FAIR Data</h3>
-          <p>
-          Much of the work taking place here by providers is in support of FAIR
-          data principles. We will be expanding this section to better connect the work
-          here with FAIR.
-          </p>
-          <p>
-
-          </p>
-        </div>
-        <div class="col-2 hidden-sm"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-4 hidden-sm"></div>
-        <div class="col-4">
-          <div class="line"></div>
-        </div>
-        <div class="col-4 hidden-sm"></div>
-      </div>
-      <div class="row">
-        <div class="col-2 hidden-sm"></div>
-        <div class="col-8">
-          <h3 class="center m-bottom">Simple Architecture</h3>
-          <p>
-          The GeoCODES architecture is exploring leveraging basic web architecture and structured data on the web to
-          scale its services.
-          </p>
-          <p>
-          Schema.org is a collaborative, community activity with a mission to create, maintain,
-          and promote schemas for structured data on the Internet, on web pages, in email messages, and beyond.
-          Schema.org can be extended with vocabularies such as DCAT, SOSA, etc.  This work is taking
-          place at the <a target="_blank" href= "https://github.com/ESIPFed/science-on-schema.org">ESIP Science on Schema</a>.
-          </p>
-          <p>
-            Such an approach also allows us to leverage the rich ecosystem of tools developers currently
-            leverage for JSON.  Additionally a grow suite of tools and guides specifically for geosciences and
-            structured data on the web are under development.
-          </p>
-        </div>
-        <div class="col-2 hidden-sm"></div>
-      </div>
-
-
-      </div>
   </div>
+
+
   <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <h6 style="color:white">Work on this site is supported by NSF EarthCube</h6>
-          <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach Cole</a>
-            Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>
+          <h6 style="color:grey">Simple Grid by <a style="color:grey" href="http://zcole.me" target="_blank">Zach
+              Cole</a>
+            Open source under the <a style="color:grey" href="https://opensource.org/licenses/MIT" target="_blank">MIT
+              License</a>
           </h6>
         </div>
       </div>
     </div>
   </footer>
 </body>
+
 </html>
