--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -53,9 +53,13 @@
     <div class="row  mb-3  mt-3 d-flex justify-content-center">
 
         <div class="co " >
+						<p> <br> &nbsp 
             <img src="images/blueEConwhite.png" height=66 />
         </div>
-
+				<div> 
+						<p> <br> &nbsp 
+						<p> <br> &nbsp 
+						<p> &nbsp </div>
     </div>
 
     <form
