align compatible tools

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -78,7 +78,8 @@
 
 
 
-            <div class="row">
+            <div class="row ml-4 mr-1">
+
                 <!-- <div class="col-4 center"> -->
                 <!-- <div class="img img-responsive center"></div> -->
                 <!-- <img src="./img/throughput.svg" style="height:75px"> -->
@@ -92,9 +93,9 @@
 <!--<div class="col-6">-->
 <!--		&lt;!&ndash; <h3>Related Data</h3> &ndash;&gt;-->
 <!--</div>-->
-                <div class="col-1" ></div>
-                <div class="col-6 ">
-                    <h3>Compatible tools</h3>
+
+                <div class="col-8 p-0">
+                    <h3 >Compatible tools</h3>
 										<!-- <div class="row border rounded my-1 ml-6 color:white"> -->
                     <div class="row  m-1 my-1 ml-6 ">
                         <span class="col-4">web apps:</span>
