--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -58,6 +58,9 @@
 
             <ul class="navbar-nav mr-auto">
 
+								<li class="nav-item">
+                    <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query"  target="_blank">SPARQL Endpoint</a>
+                </li>
                 <li class="nav-item">
 										<a class="nav-link" href="landing.html" target="_blank">Search</a>
                 </li>
