--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -34,7 +34,7 @@
 
 <body class="container-fluid ml-1">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12 ml-6">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12 ml-6 py-1">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy">
@@ -58,11 +58,11 @@
 
             <ul class="navbar-nav mr-auto">
 
-								<li class="nav-item">
-                    <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query"  target="_blank">SPARQL Endpoint</a>
-                </li>
                 <li class="nav-item">
 										<a class="nav-link" href="landing.html" target="_blank">Search</a>
+                </li>
+								<li class="nav-item">
+                    <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query"  target="_blank">SPARQL Endpoint</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html" target="_blank">Help</a>
