py-0 for navbar

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -26,15 +26,15 @@
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@next/webcomponents-loader.js"></script>
     <script type="module" src="./js/dataset2/obj-exchange.js"></script>
     <!-- <script type="module" src="/js/components/demo-tp.js"></script> -->
-    <script type="module" src="./js/dataset2/eco-sparql.js"></script>
-    <script type="module" src="./js/dataset2/eco-urltemplate.js"></script>
+    <script type="module" src="./js/dataset2/eco-sparql.js?v=123"></script>
+    <script type="module" src="./js/dataset2/eco-urltemplate.js?v=123"></script>
     <script type="application/javascript" src="./js/dataset2/map.js"></script>
     <link rel="stylesheet" href="./css/main.css"/>
 </head>
 
 <body class="container-fluid ml-1">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12 ml-6 py-1">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-12 ml-6 py-0">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy">
