compat-tools subheading only when there

--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -101,14 +101,14 @@
 										<br><h3 >Compatible tools</h3>
 										<!-- <div class="row border rounded my-1 ml-6 color:white"> -->
                     <div class="row  m-1 my-1 ml-6 ">
-                        <span class="col-4">web apps:</span>
+												<!-- <span class="col-4">web apps:</span> -->
 
                        <eco-urltemplate ></eco-urltemplate>
                     </div>
 										<!-- <div class="row border rounded my-1  ml-6 color:white"> -->
                     <div class="row  m-1 my-1  ml-6 ">
 												<!-- <span  class="col-4">downloadable tools:</span> -->
-						<span  class="col-4">downloadable:</span>
+												<!-- <span  class="col-4">downloadable:</span> -->
 
 
                         <eco-sparql ></eco-sparql>
