--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -18,10 +18,14 @@
 
     <script src="https://cdn.jsdelivr.net/npm/underscore@1.12.0/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.0.0/js-yaml.min.js"></script>
-   <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.0.2/package/lib/browser/fs.js"></script> -->
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.0.2/package/lib/browser/fs.js"></script> -->
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+          integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+          crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+            integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+            crossorigin=""></script>
 
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs@next/webcomponents-loader.js"></script>
     <script type="module" src="./js/dataset2/obj-exchange.js"></script>
@@ -45,7 +49,7 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <form class="input-group form-inline  w-50 invisible" >
+    <form class="input-group form-inline  w-50 invisible">
         <input id="q" class="form-control w-25 ml-sm-2" type="search" placeholder="Search" aria-label="Search">
         <div class="input-group-append">
             <a href="#" class="btn btn-default" id="searchBtn">
@@ -55,83 +59,68 @@
         <input style="visibility: hidden" id="nn" type="number" min="5" max="200" step="5" value="20"/>
     </form>
     <div class="navbar-text font-weight-bold">
-    GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
-</div>
+        GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+    </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
 
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-               <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query"  target="_blank">SPARQL Endpoint</a>
+                <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query" target="_blank">SPARQL
+                    Endpoint</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html"  target="_blank">Help</a>
+                <a class="nav-link" href="about.html" target="_blank">Help</a>
             </li>
         </ul>
-
-
-                <li class="nav-item">
-										<a class="nav-link" href="landing.html" target="_blank">Search</a>
-                </li>
-								<li class="nav-item">
-                    <a class="nav-link" href="https://graph.geodex.org/blazegraph/#query"  target="_blank">SPARQL Endpoint</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html" target="_blank">Help</a>
-                </li>
-            </ul>
-
 
 
     </div>
 </nav>
 
 
-
-                <obj-exchange class="row ml-4 mr-1" ></obj-exchange>
-
+<obj-exchange class="row ml-4 mr-1"></obj-exchange>
 
 
-            <div class="row ml-4 mr-1">
+<div class="row ml-4 mr-1">
 
-                <!-- <div class="col-4 center"> -->
-                <!-- <div class="img img-responsive center"></div> -->
-                <!-- <img src="./img/throughput.svg" style="height:75px"> -->
-                <!-- <h3>Throughput</h3> -->
-                <!-- <p> -->
+    <!-- <div class="col-4 center"> -->
+    <!-- <div class="img img-responsive center"></div> -->
+    <!-- <img src="./img/throughput.svg" style="height:75px"> -->
+    <!-- <h3>Throughput</h3> -->
+    <!-- <p> -->
 
-                <!-- <demo-tp></demo-tp> -->
+    <!-- <demo-tp></demo-tp> -->
 
-                <!-- </p> -->
-                <!-- </div> -->
-<!--<div class="col-6">-->
-<!--		&lt;!&ndash; <h3>Related Data</h3> &ndash;&gt;-->
-<!--</div>-->
+    <!-- </p> -->
+    <!-- </div> -->
+    <!--<div class="col-6">-->
+    <!--		&lt;!&ndash; <h3>Related Data</h3> &ndash;&gt;-->
+    <!--</div>-->
 
-                <div class="col-8 p-0">
-										<br><h3 >Compatible tools</h3>
-										<!-- <div class="row border rounded my-1 ml-6 color:white"> -->
+    <div class="col-8 p-0">
 
-
-												<!-- <span class="col-4">web apps:</span> -->
+        <h3 class="mt-4">Compatible tools</h3>
+        <!-- <div class="row border rounded my-1 ml-6 color:white"> -->
 
 
-                       <eco-urltemplate class="row  m-1 my-1 ml-6 " ></eco-urltemplate>
-
-										<!-- <div class="row border rounded my-1  ml-6 color:white"> -->
-
-												<!-- <span  class="col-4">downloadable tools:</span> -->
-												<!-- <span  class="col-4">downloadable:</span> -->
-
-                        <eco-sparql class="row  m-1 my-1 ml-6 "></eco-sparql>
+        <!-- <span class="col-4">web apps:</span> -->
 
 
-                </div>
+        <eco-urltemplate class="row  m-1 my-1 ml-6 "></eco-urltemplate>
 
-            </div>
+        <!-- <div class="row border rounded my-1  ml-6 color:white"> -->
 
+        <!-- <span  class="col-4">downloadable tools:</span> -->
+        <!-- <span  class="col-4">downloadable:</span> -->
+
+        <eco-sparql class="row  m-1 my-1 ml-6 "></eco-sparql>
+
+
+    </div>
 
 </div>
+
+
 
 
 
