add link to alpha

--- a/geodex/website/index.html
+++ b/geodex/website/index.html
@@ -42,6 +42,9 @@
       </div>
      </div>
   </div>
+					<b>
+					<p><a href=http://alpha.geocodes.earthcube.org/>upcoming: alpha.geocodes.earthcube.org faceted-search</a>
+					</b>
 
   <div class="body-content">
     <div style="padding-top:0px;top:0px" class="container">
@@ -84,6 +87,11 @@
       <div class="row">
         <div class="col-2 hidden-sm"></div>
         <div class="col-8">
+          <h3 class="center m-bottom">Upcoming version</h3>
+					<center>
+					<p><a href=http://alpha.earthcube.org/>snapshot:    alpha.earthcube.org</a>
+					<p><a href=http://alpha.geocodes.earthcube.org/>dev:<b>alpha.geocodes.earthcube.org</b></a>
+					</center>
           <h3 class="center m-bottom">References</h3>
           <p>
             A very rough draft providing an overview on
