--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -312,12 +312,14 @@ table {
             </tbody>
         </table>
     </div>
-    <div class="row">
-
-				<p>
-
+		<!--
+    <div class="row"> 
+				<p> 
         <div class="col-2 hidden-sm"></div>
         <div class="col-8">
+		-->
+						<h3>Feedback:</h3>
+						Create an <a href="https://github.com/earthcube/geodexui/issues" target="_blank">issue</a> and a feedback email coming soon.
 
 </div>
 
