--- a/geodex/website/index.html
+++ b/geodex/website/index.html
@@ -43,7 +43,7 @@
      </div>
   </div>
 					<b>
-					<p><a href=http://alpha.geocodes.earthcube.org/>upcoming: alpha.geocodes.earthcube.org faceted-search</a>
+					<p><a href=http://beta.geocodes.earthcube.org/>upcoming: beta.geocodes.earthcube.org faceted-search</a>
 					</b>
 
   <div class="body-content">
@@ -89,8 +89,7 @@
         <div class="col-8">
           <h3 class="center m-bottom">Upcoming version</h3>
 					<center>
-					<p><a href=http://alpha.earthcube.org/>snapshot:    alpha.earthcube.org</a>
-					<p><a href=http://alpha.geocodes.earthcube.org/>dev:<b>alpha.geocodes.earthcube.org</b></a>
+					<p><a href=http://beta.earthcube.org/>beta.earthcube.org</a>
 					</center>
           <h3 class="center m-bottom">References</h3>
           <p>
