add back geocodes img

--- a/geodex/website/index.html
+++ b/geodex/website/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 center">
-          <img src="./img/location2.svg">
+          <img src="./img/geocodes.png" width=200>
           <h3 style="margin:5px;color:white">GeoCODES</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
             <!--
@@ -43,7 +43,8 @@
      </div>
   </div>
 					<b>
-					<p><a href=https://beta.geocodes.earthcube.org/>upcoming: beta.geocodes.earthcube.org faceted-search</a>
+							<h3><center><a href=https://beta.geocodes.earthcube.org/>upcoming: beta.geocodes.earthcube.org faceted-search</a>
+									</center></h3>
 					</b>
 
   <div class="body-content">
