sparql notes update

--- a/gleaner/website/index.html
+++ b/gleaner/website/index.html
@@ -85,16 +85,18 @@
         <div class="col-4 center">
           <!-- <div class="img img-responsive center"></div>   -->
           <img src="./img/throughput.svg" style="height:75px">
-          <h3>Throughput</h3>
           <p>
 
-            <throughput-widget identifier="r3d100012894" additional-type="http://linked.earth/ontology#Dataset" link.prop="tmeZsxjY5oSP1dOcgrJW" />
+            <h3>Throughput</h3>
+
+            <throughput-widget read-only-mode="true" identifier="r3d100011761" additional-type="site" link="1114" />
+
+            <!-- <throughput-widget read-only-mode="true" identifier="r3d100012894" additional-type="http://linked.earth/ontology#Dataset" link="tmeZsxjY5oSP1dOcgrJW" /> -->
 
           </p>
         </div>
 
-        <div class="col-4 center">
-          <!-- <div class="img img-responsive center"></div>   -->
+        <!-- <div class="col-4 center">
           <img src="./img/throughput.svg" style="height:75px">
           <h3>Throughput</h3>
           <p>
@@ -102,7 +104,7 @@
             <demo-tp></demo-tp>
 
           </p>
-        </div>
+        </div> -->
 
         <div class="col-4 center">
           <img src="./img/aggregate.svg" style="height:75px">
