use more specific email

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -319,7 +319,7 @@ table {
         <div class="col-8">
 		-->
 						<h3>Feedback:</h3>
-						Create an <a href="https://github.com/earthcube/geodexui/issues" target="_blank">issue</a> and/or write us at <a href=mailto:feedback@earthcube.org  target="_blank">feedback@earthcube.org</a>.
+						Create an <a href="https://github.com/earthcube/geodexui/issues" target="_blank">issue</a> and/or write us at <a href=mailto:feedback@geocodes.earthcube.org  target="_blank">feedback@geocodes.earthcube.org</a>.
 
 </div>
 
