--- a/geodex/website/index.html
+++ b/geodex/website/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 center">
-          <img src="./img/geocodes.png" width=200>
+          <img src="./img/GeoCODES.png" width=200>
           <h3 style="margin:5px;color:white">GeoCODES</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
             <!--
