about w/logo+feedback

--- a/geodex/website/about.html
+++ b/geodex/website/about.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col-12 center">
 						<!-- <img src="./img/location2.svg"> -->
-            <img src="./img/location2.svg">
+						<a href=https://www.earthcube.org/geocodes  target="_blank"><img src="./img/GeoCODES.png" width=200></a>
             <h3 style="margin:5px;color:white">GeoCODES</h3>
           <h3 style="margin:5px;color:white" class="font-light">a schema.org/Dataset search</h3>
           <!-- 
@@ -69,7 +69,7 @@
           <h3 class="center m-bottom">About</h3>
 
           <p>
-            GeoDex is an implementation of the structured data on the web patterns.  
+            GeoCODES is an implementation of the structured data on the web patterns.  
           </p>
 
           <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
@@ -141,6 +141,8 @@
 
 
 
+		<h3>Feedback:</h3>
+            Create an <a href="https://github.com/earthcube/geodexui/issues" target="_blank">issue</a> and/or write us at <a href=mailto:feedback@geocodes.earthcube.org  target="_blank">feedback@geocodes.earthcube.org</a>.
     </div>
   </div>
   <footer style="padding-bottom:5px;background-image: linear-gradient(#7391ff, #625354);">
