logo+taglin on about+search too now

--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -33,9 +33,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
-                 class="d-inline-block align-top" alt="EarthCube" loading="lazy">
-
-        </a>
+                 class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
+        <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
+            <img src="images/GeoCODES.png" height="30"
+                 class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <!-- -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +52,7 @@
             <input style="visibility: hidden" id="nn" type="number" min="5" max="200" step="5" value="20"/>
         </form>
         <div class="navbar-text font-weight-bold">
-            GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+             <span class="font-weight-normal font-italic"> Find and use geosciences data and tools</span>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
