--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -47,9 +47,11 @@ table {
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
-                 class="d-inline-block align-top" alt="EarthCube" loading="lazy">
+                 class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
+        <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
+            <img src="images/GeoCODES.png" height="30"
+                 class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
 
-        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,7 +70,7 @@ table {
             </ul>
 
         </div>
-        <div class="navbar-text font-weight-bold">GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+        <div class="navbar-text font-weight-bold"> <span class="font-weight-normal font-italic"> Find and use geosciences data and tools</span>
         </div>
     </nav>
 
