try logo w/blue

--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -23,7 +23,7 @@
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
-            <img src="images/GeoCODES.png" height="30"
+            <img src="images/GeoCODESb.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <!-- -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
