logos:half-blue-upper noline-lower

--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -63,7 +63,7 @@
 
         <div class="co " >
 						<p> <br> &nbsp <p> <br> &nbsp
-            <img src="images/GeoCODEStag.png" height=66 />
+            <img src="images/GeoCODESnl.png" height=66 />
         </div>
 						<div> <p> <br> &nbsp <p> <br> &nbsp <p> &nbsp </div>
 
