rm GC logo from landing header only right now

--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -23,9 +23,10 @@
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
+        <!--
             <img src="images/GeoCODESb.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
-        <!-- -->
+				-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -63,7 +64,7 @@
 
         <div class="co " >
 						<p> <br> &nbsp <p> <br> &nbsp
-            <img src="images/GeoCODESnl.png" height=66 />
+						<a href="https://www.earthcube.org/geocodes"  target="_blank"><img src="images/GeoCODESnl.png" height=66 /></a>
         </div>
 						<div> <p> <br> &nbsp <p> <br> &nbsp <p> &nbsp </div>
 
