--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -98,15 +98,15 @@
 
             <div class="input-group mb-3 col-2">
                 <div class="form-check form-check-inline">
-                    <input type="radio" id="all" value="all" name="searchTypes" class="form-check-input" checked>
+                    <input type="radio" id="all" value="all" name="resourceType" class="form-check-input" checked>
                     <label class="form-check-label" for="all">All</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" id="tool" value="tool" name="searchTypes" class="form-check-input">
+                    <input type="radio" id="tool" value="tool" name="resourceType" class="form-check-input">
                     <label class="form-check-label" for="tool">Tool</label>
                 </div>
                 <div class="form-check form-check-inline">
-                    <input type="radio" id="data" value="data" name="searchTypes" class="form-check-input">
+                    <input type="radio" id="data" value="data" name="resourceType" class="form-check-input">
                     <label class="form-check-label" for="data">data</label>
                 </div>
             </div>
