--- a/alpha/website/facetedsearch_live.html
+++ b/alpha/website/facetedsearch_live.html
@@ -152,32 +152,32 @@
                         prefix sschema: <https://schema.org/>
                         SELECT distinct ?subj ?pubname (GROUP_CONCAT(DISTINCT ?placename; SEPARATOR=", ") AS ?placenames)
         (GROUP_CONCAT(DISTINCT ?kwu; SEPARATOR=", ") AS ?kw)
-        ?datep  (GROUP_CONCAT(DISTINCT ?url; SEPARATOR=", ") AS ?disurl) (MAX(?score) as ?maxScore)   ?name ?description ?resourceType ?g
+				?datep  (GROUP_CONCAT(DISTINCT ?url; SEPARATOR=", ") AS ?disurl) (MAX(?score1) as ?score)   ?name ?description ?resourceType ?g
         WHERE {
             ?lit bds:search \"${q}\" .
             ?lit bds:matchAllTerms "false" .
-            ?lit bds:relevance ?score .
+            ?lit bds:relevance ?score1 .
             ?subj ?p ?lit .
             BIND (IF (exists {?subj a schema:Dataset .} ||exists{?subj a sschema:Dataset .} , "data", "tool") AS ?resourceType).
-            filter( ?score > 0.04).
-						Minus {?subj a sschema:ResearchProject } .
-						Minus {?subj a schema:ResearchProject } .
-						Minus {?subj a sschema:PropertyValue } .
-						Minus {?subj a schema:PropertyValue } .
-						Minus {?subj a schema:Person } .
-						Minus {?subj a sschema:Person } .
+            filter( ?score1 > 0.04).
+            Minus {?subj a sschema:ResearchProject } .
+            Minus {?subj a schema:ResearchProject } .
+            Minus {?subj a sschema:PropertyValue } .
+            Minus {?subj a schema:PropertyValue } .
+            Minus {?subj a schema:Person } .
+            Minus {?subj a sschema:Person } .
             graph ?g { ?subj schema:name|sschema:name ?name .
-			                 ?subj schema:description|sschema:description ?description . }
+                       ?subj schema:description|sschema:description ?description . }
             optional {?subj schema:distribution/schema:url|schema:subjectOf/schema:url ?url .}
             OPTIONAL {?subj schema:datePublished|sschema:datePublished ?date_p .}
             OPTIONAL {?subj schema:publisher/schema:name|sschema:publisher/sschema:name ?pub_name .}
             OPTIONAL {?subj schema:spatialCoverage/schema:name|sschema:spatialCoverage/sschema:name|sschema:sdPublisher ?place_name .}
             OPTIONAL {?subj schema:keywords|sschema:keywords ?kwu .}
-				    BIND ( IF ( BOUND(?date_p), ?date_p, "No datePublished") as ?datep ) .
-		        BIND ( IF ( BOUND(?pub_name), ?pub_name, "No Publisher") as ?pubname ) .
+            BIND ( IF ( BOUND(?date_p), ?date_p, "No datePublished") as ?datep ) .
+            BIND ( IF ( BOUND(?pub_name), ?pub_name, "No Publisher") as ?pubname ) .
             BIND ( IF ( BOUND(?place_name), ?place_name, "No spatialCoverage") as ?placename ) .
         }
-        GROUP BY ?subj ?datep ?pubname ?name ?description  ?resourceType ?g
+        GROUP BY ?subj ?pubname ?placenames ?kw ?datep ?disurl ?score ?name ?description  ?resourceType ?g
         ORDER BY DESC(?score)
         LIMIT ${n}
         OFFSET ${o}`
