--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -49,7 +49,7 @@ table {
             <img src="images/EarthCube-White-Long-Tagline.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
-            <img src="images/GeoCODES.png" height="30"
+            <img src="images/GeoCODESb.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
