--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -41,9 +41,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="https://www.earthcube.org/">
         <img src="images/EarthCube-White-Long-Tagline.png" height="30"
-             class="d-inline-block align-top" alt="EarthCube" loading="lazy">
-
-    </a>
+             class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
+        <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
+            <img src="images/GeoCODESb.png" height="30"
+                 class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
     <!-- -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
