--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -60,7 +60,7 @@
         <input style="visibility: hidden" id="nn" type="number" min="5" max="200" step="5" value="20"/>
     </form>
     <div class="navbar-text font-weight-bold">
-        GeoCODES <span class="font-weight-normal font-italic"> a schema.org/Dataset search</span>
+        <span class="font-weight-normal font-italic"> Find and use geoscience data and tools</span>
     </div>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
