UPdate bootstrap to cerulan. Change to use css/boostrap.css. Update to use proper tag. Remove hard coded margin on body from about.html

--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/zc-grid.css">
     -->
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="./css/spacelab/bootstrap.css"/>
+    <link rel="stylesheet" href="./css/bootstrap.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css"/>
 
@@ -26,7 +26,7 @@
 
 
 <style>
-body { margin-left: 80px; margin-right: 80px; }
+
 table, th, td {
   border: 30px  solid white;
   padding: 5px;
@@ -41,10 +41,10 @@ table {
 
 </head>
 
-<body style="margin:80;padding:8">
+<body >
 <!-- <div class="jumbotron" style="background-image: linear-gradient(#7391ff, #625354);"> -->
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="52"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
@@ -76,7 +76,7 @@ table {
 
     <!-- <div class="row"><h3>About</h3></div>
     <div class="row">
-				<div class="row"> 
+				<div class="row">
       <div class="row">
         <div class="col-2 hidden-sm"></div>
         <div class="col-8">
@@ -85,11 +85,11 @@ table {
   <br>
   <br>
 <p class="font_7" style="font-size:18px"><span style="font-size:18px;color:black">
-		<h3> 
+		<h3>
 				<!-- 	class="center m-bottom" class="font_7" style="font-size:26px;color:black"> -->
 														<a href="https://www.earthcube.org/geocodes" target="_blank">What is GeoCODES?</a>
 		</h3>
-														<!---		</span></span></span>  
+														<!---		</span></span></span>
 <p class="font_7" style="font-size:18px"><span style="font-size:18px"><span style="font-weight:bold"><span class="wixGuard"></span></span></span></p>
 														-->
 
@@ -98,7 +98,7 @@ table {
 </span>
 </p>
 
-<ul class="font_7" style="font-size:18px;color:black"> 
+<ul class="font_7" style="font-size:18px;color:black">
   <li>
 			<!-- <p class="font_7" style="font-size:18px"><span style="font-size:18px"> -->
 			An evolving standard for exposing data called<span style="text-decoration:underline"><a href="https://github.com/ESIPFed/science-on-schema.org" target="_blank" rel="noopener"> science on schema</a>
@@ -141,7 +141,7 @@ table {
                     <div title="The Environmental Data Initiative is an NSF-funded project meant to accelerate curation and archive of environmental data, emphasizing data from projects funded by the NSF Division of Environmental Biology. Aside from hosting the LTER data repository and collaborating with the LTER Information Managers, EDI serves the ecological research community including but not limited to research funded by the Long Term Research in Environmental Biology (LTREB), Organization for Biological Field Stations (OBFS), and Macrosystems Biology (MSB). The Environmental Data Initiative maintains and develops the PASTA infrastructure for its data repositories, and has recently become DataONE’s 40th member node.
 . [28248 records]"><a href=http://environmentaldatainitiative.org/>
 		<center><img style="max-width: 180px; max-height: 90px"
-														 src=images/repo/edi.png><br> 
+														 src=images/repo/edi.png><br>
                         Environmental Data Initiative</a>
 <br><small>[28248 records]</small></center></td>
 										</div>
@@ -315,8 +315,8 @@ table {
         </table>
     </div>
 		<!--
-    <div class="row"> 
-				<p> 
+    <div class="row">
+				<p>
         <div class="col-2 hidden-sm"></div>
         <div class="col-8">
 		-->
