--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -7,7 +7,7 @@
 
     <title>Earthcube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/spacelab/bootstrap.css"/>
+    <link rel="stylesheet" href="./css/bootstrap.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -38,7 +38,7 @@
 
 <body class="container-fluid ml-1">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="https://www.earthcube.org/">
         <img src="images/EarthCube-White-Long-Tagline.png" height="52"
              class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
