--- a/alpha/website/landing.html
+++ b/alpha/website/landing.html
@@ -7,7 +7,7 @@
 
     <title>Earthcube</title>
 
-    <link rel="stylesheet" href="./css/spacelab/bootstrap.css"/>
+    <link rel="stylesheet" href="./css/bootstrap.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
 
 <body>
 <div class="container-fluid" >
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://www.earthcube.org/">
             <img src="images/EarthCube-White-Long-Tagline.png" height="52"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
