--- a/alpha/website/about.html
+++ b/alpha/website/about.html
@@ -46,10 +46,10 @@ table {
 <div class="container-fluid">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="https://www.earthcube.org/">
-            <img src="images/EarthCube-White-Long-Tagline.png" height="52"
+            <img src="images/EarthCube-White-Long-Tagline.png" height="60"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
-            <img src="images/GeoCODESb.png" height="30"
+            <img src="images/GeoCODES.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
