--- a/alpha/website/dataset.html
+++ b/alpha/website/dataset.html
@@ -40,10 +40,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="https://www.earthcube.org/">
-        <img src="images/EarthCube-White-Long-Tagline.png" height="52"
+        <img src="images/EarthCube-White-Long-Tagline.png" height="60"
              class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
         <a class="navbar-brand" href="https://www.earthcube.org/geocodes">
-            <img src="images/GeoCODESb.png" height="30"
+            <img src="images/GeoCODES.png" height="30"
                  class="d-inline-block align-top" alt="EarthCube" loading="lazy"> </a>
     <!-- -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
